// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`flow-mapping.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  foo: 1,
  foo: {
    bar: 1,
    bar: 2
  }
}

---
{
  ? foo
  : 1,
  ? foo
  : 2
}

=====================================output=====================================
{ foo: 1, foo: { bar: 1, bar: 2 } }
---
{ foo: 1, foo: 2 }

================================================================================
`;

exports[`mapping.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: 1
foo:
  bar: 1
  bar:
    baz: 1
    baz: 2

---
? foo
: 1
? foo
: 2

=====================================output=====================================
foo: 1
foo:
  bar: 1
  bar:
    baz: 1
    baz: 2

---
foo: 1
foo: 2

================================================================================
`;

exports[`merge-key.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---
&a key: 1
&b key: 2

<<: *a
<<: *b

foo:
  <<: *a
  <<: *b

=====================================output=====================================
---
&a key: 1
&b key: 2

<<: *a
<<: *b

foo:
  <<: *a
  <<: *b

================================================================================
`;

exports[`template-expression.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# 12651
steps:
    \${{ if paremeters.option }}:
        given: Chris
    \${{ else }}:
        given: Dave
    \${{ if paremeters.option }}:
        family: Dumars
    \${{ else }}:
        family: Brands

=====================================output=====================================
# 12651
steps:
  \${{ if paremeters.option }}:
    given: Chris
  \${{ else }}:
    given: Dave
  \${{ if paremeters.option }}:
    family: Dumars
  \${{ else }}:
    family: Brands

================================================================================
`;
